[package]
name = "vmm-vcpu"
version = "0.1.0"
authors = ["Jenny Mankin <jenny.mankin@crowdstrike.com>", 
           "Timo Kreuzer <timo.kreuzer@reactos.org>",
           "Alessandro Pilotti <apilotti@cloudbasesolutions.com>"]
           
[dependencies]
byteorder = "*"

[target.'cfg(unix)'.dependencies]
kvm-bindings = "0.1"

libc = ">=0.2.39"